--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -32,16 +32,12 @@
                 android:layout_height="fill_parent"
                 android:text="coucou"
                 android:id="@+id/myText"/>
-            <EditText
+
+            <ListView
+                android:id="@android:id/list"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:id="@+id/myUrl"/>
-            <Button
-                android:id="@+id/submit_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/submit" />
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
     </ScrollView>
 
