--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -13,13 +13,13 @@
         android:textSize="30sp" />
 
 
-
-
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/header" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/recycler_view"
+        android:scrollbars="vertical"
+        android:layout_below="@id/header"
+    ></android.support.v7.widget.RecyclerView>
 
 
 
