--- a/app/src/main/res/layout/activity_single_article.xml
+++ b/app/src/main/res/layout/activity_single_article.xml
@@ -5,26 +5,13 @@
     tools:context="canul.android.SingleArticleActivity"
     >
 
-    <TextView
-        android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#598bc9"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="@string/header"
-        android:textSize="30sp" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/header"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingEnd="10dp"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingStart="10dp"
-        android:paddingTop="@dimen/activity_vertical_margin"
         android:id="@+id/scrollView">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -53,6 +40,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
+                        android:textColor="@color/primary_dark"
                         android:layout_alignParentTop="true"
                         android:text="title"/>
 
@@ -61,6 +49,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:textColor="@color/text_muted"
                         android:layout_below="@+id/title"
                         android:text="published"/>
 
@@ -69,6 +58,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:textColor="@color/text_secondary"
                         android:layout_below="@+id/published"
                         android:text="content"/>
 
@@ -78,6 +68,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_below="@+id/content"
+                        android:textColor="@color/text_muted"
                         android:text="author"/>
 
                     <TextView
@@ -88,6 +79,7 @@
                         android:clickable="true"
                         android:text="Commentaires()"
                         android:layout_alignParentBottom="true"
+                        android:textColor="@color/text_muted"
                         android:layout_alignParentEnd="true" />
 
                 </RelativeLayout>
