--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -18,29 +18,52 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_alignParentTop="true"
-                android:text="author"/>
+                android:orientation="horizontal"
+                android:id="@+id/header_div"
+                android:gravity="top"
+                >
 
-            <TextView
-                android:id="@+id/published"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:text="author"
+                    android:textColor="@color/text_muted"
+                    />
+
+                <TextView
+                    android:id="@+id/published"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:text="published"
+                    android:textColor="@color/text_muted"
+                    />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/header_div"
+                android:id="@+id/header_divider"
                 android:layout_marginTop="10dp"
-                android:layout_below="@+id/author"
-                android:text="published"/>
+                android:background="@color/text_muted" />
 
             <TextView
                 android:id="@+id/content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_below="@+id/published"
-                android:text="content"/>
+                android:layout_below="@+id/header_divider"
+                android:text="content"
+                android:textColor="@color/text_secondary"/>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
