--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,9 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp" >
+    android:paddingTop="10dp"
+    android:background="?android:attr/selectableItemBackground">
 
     <!-- Name Label -->
 
@@ -13,41 +12,70 @@
         android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="2dip"
-        android:paddingTop="6dip"
         android:textSize="16sp"
+        android:textColor="@color/primary"
+        android:paddingLeft="10dp"
         android:textStyle="bold"
         android:text="title"
         android:textAllCaps="true"
+
+
         />
 
-    <TextView
-        android:id="@+id/published"
-        android:layout_width="fill_parent"
+    <RelativeLayout
         android:layout_height="wrap_content"
-        android:paddingBottom="2dip"
-        android:textColor="#acacac"
-        android:text="published" />
+        android:layout_width="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_marginTop="10dp"
+        >
+        <TextView
+            android:id="@+id/content"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="2dip"
+            android:textColor="@color/text_secondary"
+            android:text="content"
+            android:visibility="visible"
+            />
 
-    <!-- Email label -->
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="2dip"
-        android:textColor="#000000"
-        android:text="content"
-        android:visibility="visible"
-        />
+        <LinearLayout
+            android:paddingTop="10dp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/content"
+            >
+            <TextView
+                android:id="@+id/author"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:textColor="@color/text_muted"
+                android:text="author" />
+            <TextView
+                android:id="@+id/published"
+                android:layout_below="@+id/content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:textColor="@color/text_muted"
+                android:gravity="right"
+                android:text="published" />
 
-    <TextView
-        android:id="@+id/author"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="2dip"
-        android:textColor="#acacac"
-        android:text="author" />
 
+        </LinearLayout>
+
+
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/content"
+        android:id="@+id/divider"
+        android:layout_marginTop="5dp"
+        android:background="#BDBDBD" />
 
 
 
