--- a/app/src/main/res/layout/activity_single_article.xml
+++ b/app/src/main/res/layout/activity_single_article.xml
@@ -1,110 +1,105 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="canul.android.SingleArticleActivity"
-    >
-
-
+    android:orientation="vertical">
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/header"
-        android:paddingEnd="10dp"
-        android:paddingStart="10dp"
-        android:id="@+id/scrollView">
+        android:layout_height="match_parent" android:fillViewport="true">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/articleslay"
-           >
-            <!-- A CardView that contains a TextView -->
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/card_view"
-                android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:id="@+id/content"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                card_view:cardCornerRadius="4dp"
-                >
+                android:layout_marginTop="10dp"
+                android:text="@string/content"
+                android:textColor="@color/text_secondary"/>
 
 
-                <RelativeLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:id="@+id/relativelayout">
-                    <TextView
-                        android:id="@+id/title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:textColor="@color/primary_dark"
-                        android:layout_alignParentTop="true"
-                        android:text="title"/>
-
-                    <TextView
-                        android:id="@+id/published"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/text_muted"
-                        android:layout_below="@+id/title"
-                        android:text="published"/>
-
-                    <TextView
-                        android:id="@+id/content"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/text_secondary"
-                        android:layout_below="@+id/published"
-                        android:text="content"/>
-
-                    <TextView
-                        android:id="@+id/author"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_below="@+id/content"
-                        android:textColor="@color/text_muted"
-                        android:text="author"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/clickablecomments"
-                        android:onClick="onClick"
-                        android:clickable="true"
-                        android:text="Commentaires()"
-                        android:layout_alignParentBottom="true"
-                        android:textColor="@color/text_muted"
-                        android:layout_alignParentEnd="true" />
-
-                </RelativeLayout>
-
-            </android.support.v7.widget.CardView>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/content"
+                android:id="@+id/divider"
+                android:layout_marginTop="5dp"
+                android:background="@color/divider"/>
 
 
-        </LinearLayout>
+            <LinearLayout
+                android:paddingTop="10dp"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_below="@+id/content"
+                android:id="@+id/footer">
 
-
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="@color/text_muted"
+                    android:text="@string/author"/>
+                <TextView
+                    android:id="@+id/published"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="@color/text_muted"
+                    android:gravity="end"
+                    android:text="@string/published"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_gravity="bottom"
+                android:layout_below="@+id/footer">
+                <TextView
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:id="@+id/comments"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:background="@color/primary"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:gravity="center"
+                    android:clickable="true"
+                    android:onClick="onClick"
+                    android:text="@string/comments"
+                    android:textSize="12sp"
+                    android:layout_gravity="bottom"
+                    android:textColor="@color/text_primary"/>
+            </LinearLayout>
+        </RelativeLayout>
     </ScrollView>
 
 
-    <ListView android:id="@android:id/list"
+
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/scrollView"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:divider="@null"
         android:dividerHeight="0dp"
-        android:visibility="gone"
-        >
+        android:visibility="gone">
     </ListView>
-
 
     <ProgressBar
         android:id="@+id/progress_bar"
