--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,11 @@
     <item name="primary" type="color">#2196F3</item>
     <item name="primary_dark" type="color">#0D47A1</item>
     <item name="accent" type="color">#BBDEFB</item>
-    <item name="window_background" type="color">#E0E0E0</item>
+    <item name="window_background" type="color">#EEEEEE</item>
     <item name="text_secondary" type="color">#424242</item>
     <item name="text_muted" type="color">#757575</item>
     <item name="text_primary" type="color">#F5F5F5</item>
+    <item name="divider" type="color">#BDBDBD</item>
 
     <integer-array name="androidcolors">
         <item>@color/primary</item>
