--- a/app/src/main/res/layout/activity_single_article.xml
+++ b/app/src/main/res/layout/activity_single_article.xml
@@ -65,7 +65,8 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_gravity="bottom"
-                android:layout_below="@+id/footer">
+                android:layout_below="@+id/footer"
+                android:background="?android:attr/selectableItemBackground">
                 <TextView
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
@@ -73,9 +74,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:background="@color/primary"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
+                    android:background="@color/primary"
                     android:gravity="center"
                     android:clickable="true"
                     android:onClick="onClick"
