--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -6,8 +6,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="canul.android.activities.CommentsActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:id="@+id/recycler_view">
+
+    </android.support.v7.widget.RecyclerView>
 
     <!-- ProgressBar drawn last to be on top-->
     <ProgressBar
