--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -14,6 +14,15 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="post Comment"
+        android:layout_below="@+id/comment"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/sendbutton"
+        android:onClick="postComment"/>
+
     <!-- ProgressBar drawn last to be on top-->
     <ProgressBar
         android:id="@+id/progress_bar"
