--- a/app/src/main/res/layout/activity_show_article_and_comments.xml
+++ b/app/src/main/res/layout/activity_show_article_and_comments.xml
@@ -3,12 +3,12 @@
     android:layout_height="match_parent">
 
 
-
-    <ListView android:id="@android:id/list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </ListView>
-
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:id="@+id/recycler_view">
+    </android.support.v7.widget.RecyclerView>
 
 
     <!-- ProgressBar drawn last to be on top-->
