--- a/app/src/main/res/layout/activity_show_comments.xml
+++ b/app/src/main/res/layout/activity_show_comments.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="canul.android.activities.CommentsActivity">
+    tools:context="canul.android.activities.ShowCommentsActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
