--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="primary" type="color">#2196F3</item>
+    <item name="primary" type="color">#1aacdb</item>
     <item name="primary_dark" type="color">#0D47A1</item>
+    <item name="color_control_high_light" type="color">#FF0000</item>
     <item name="accent" type="color">#BBDEFB</item>
     <item name="window_background" type="color">#EEEEEE</item>
     <item name="text_secondary" type="color">#424242</item>
@@ -10,6 +11,7 @@
     <item name="divider" type="color">#BDBDBD</item>
 
     <integer-array name="androidcolors">
+        <item>@color/color_control_high_light</item>
         <item>@color/primary</item>
         <item>@color/primary_dark</item>
         <item>@color/accent</item>
